# pypomod

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
pypomod/: main.py  pomodoro.py  tools.py
tests/: test_pypomod.py
