[tool.poetry]
name = "pypomod"
version = "0.1.0"
description = "Simple Python CLI package for Pomodoro timer."
authors = ["Kyoungseoun Chung <kyoungseoun.chung@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = "^22.12.0"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
precommit-hook = "^0.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."console_scripts"]
pomodoro = "pypomod.main:main"
